--- a/2. RTShade/Red Faction Guerilla Re-Mars-tered/Red_Faction_Guerilla_Re-Mars-tered_4_VERY_HIGH.ini
+++ b/2. RTShade/Red Faction Guerilla Re-Mars-tered/Red_Faction_Guerilla_Re-Mars-tered_4_VERY_HIGH.ini
@@ -1,7 +1,7 @@
 PreprocessorDefinitions=PRE_BLOCK_SIZE_2_TO_7=7,USE_MOTION_VECTORS=1,HQAA__INTRODUCTION_ACKNOWLEDGED=1,HQAA_ADVANCED_MODE=1,HQAA_FP32_PRECISION=1,HQAA_FXAA_MULTISAMPLING=0,HQAA_OPTIONAL__DEBANDING=1,HQAA_OPTIONAL__TEMPORAL_AA=1,HQAA_OPTIONAL__TEMPORAL_AA_PERSISTENCE=1,CONTRAST_SHARPEN_RADIUS=0,HQAAL_ADVANCED_MODE=1,FULL_RESOLUTION=0,SMAA_INCLUDE_PS=1,SMAA_INCLUDE_VS=1,FAST_AO_POINTS=8,ADVANCED_BOKEH_EFFECTS=1,HQAA_OPTIONAL__SOFTENING=1,AFX_DOWNSCALE_FACTOR=2,VRS_USE_OPTICAL_FLOW=1,UI_DIFFICULTY=1,BLUR_QUALITY=0,MaxAccumulatedFrameNum=0,OPTICAL_FLOW_SUBPIXEL=1
-Techniques=MartysMods_AntiAliasing@MartysMods_SMAA.fx,MartyMods_Sharpen@MartysMods_SHARPEN.fx,DH_UBER_MOTION@dh_uber_motion.fx,Cobra_Masking_Start@Cobra_Mask.fx,MartysMods_MXAO@MartysMods_MXAO.fx,DH_UBER_RT@dh_uber_rt.fx,CobraFX_Masking_End@Cobra_Mask.fx,AmbientLight@AmbientLight-dithertoggle.fx
+Techniques=MartysMods_AntiAliasing@MartysMods_SMAA.fx,MartyMods_Sharpen@MartysMods_SHARPEN.fx,Cobra_Masking_Start@Cobra_Mask.fx,DH_UBER_MOTION@dh_uber_motion.fx,MartysMods_MXAO@MartysMods_MXAO.fx,DH_UBER_RT@dh_uber_rt.fx,CobraFX_Masking_End@Cobra_Mask.fx,AmbientLight@AmbientLight.fx,ADOF@qUINT_dof.fx
 
-[AmbientLight-dithertoggle.fx]
+[AmbientLight.fx]
 alAdapt=0.700000
 alAdaptBaseBlackLvL=2
 alAdaptBaseMult=1.000000
@@ -46,7 +46,7 @@ ValueEdge=0.750000
 ValueRange=0.150000
 
 [dh_uber_motion.fx]
-iMotionRadius=4
+iMotionRadius=8
 
 [dh_uber_rt.fx]
 bAddAmbient=0
@@ -55,7 +55,7 @@ bRemoveAmbient=1
 bRemoveAmbientAuto=1
 bRemoveAmbientPreserveBrightness=0
 bRTHitFast=1
-bSSR=0
+bSSR=1
 cSourceAmbientLightColor=0.121569,0.172549,0.164706
 cTargetAmbientLightColor=0.050980,0.050980,0.050980
 fAODarkProtect=0.000000
@@ -71,10 +71,10 @@ fGIDarkMerging=0.500000
 fGIFinalMerging=1.000000
 fGIHueBiais=0.250000
 fGILightMerging=0.500000
-fMergingRoughness=1.000000
-fMergingSSR=0.050000
+fMergingRoughness=1.200000
+fMergingSSR=0.250000
 fNormalRoughness=0.150000
-fRayStepPrecision=1000.000000
+fRayStepPrecision=2000.000000
 fRTMinRayBrightness=0.200000
 fSkyColor=1.000000
 fSkyDepth=0.990000
@@ -85,11 +85,11 @@ iBlackLevel=0
 iCheckerboardRT=2
 iDebug=0
 iFrameAccu=3
-iRoughnessRadius=1
+iRoughnessRadius=4
 iRTCheckHitPrecision=9
-iRTMaxRays=2
-iSmoothRadius=2
-iSmoothStep=5
+iRTMaxRays=4
+iSmoothRadius=5
+iSmoothStep=3
 iWhiteLevel=255
 
 [MartysMods_MXAO.fx]
@@ -97,16 +97,16 @@ HELP1=0
 MXAO_DEBUG_VIEW_ENABLE=0
 MXAO_FADE_DEPTH=1.000000
 MXAO_FILTER_SIZE=1
-MXAO_GLOBAL_SAMPLE_QUALITY_PRESET=2
+MXAO_GLOBAL_SAMPLE_QUALITY_PRESET=4
 MXAO_SAMPLE_RADIUS=1.000000
-MXAO_SSAO_AMOUNT=0.850000
+MXAO_SSAO_AMOUNT=0.700000
 MXAO_WORLDSPACE_ENABLE=1
 PreprocessorDefinitions=MXAO_AO_TYPE=2
 SHADING_RATE=1
 
 [MartysMods_SHARPEN.fx]
-QUALITY=0
-SHARP_AMT=0.700000
+QUALITY=1
+SHARP_AMT=0.600000
 
 [MartysMods_SMAA.fx]
 DebugOutput=0
@@ -121,4 +121,26 @@ SMAA_PREDICATION_SCALE=8.000000
 SMAA_PREDICATION_STRENGTH=4.000000
 SMAA_PREDICATION_THRESHOLD=0.005000
 SMAA_THRESHOLD=0.007000
+
+[qUINT_dof.fx]
+bADOF_AutofocusEnable=1
+fADOF_AutofocusCenter=0.500000,0.500000
+fADOF_AutofocusRadius=0.150000
+fADOF_AutofocusSpeed=1.000000
+fADOF_BokehIntensity=0.300000
+fADOF_FarBlurCurve=2.600000
+fADOF_HyperFocus=0.100000
+fADOF_ManualfocusDepth=0.001000
+fADOF_NearBlurCurve=3.200000
+fADOF_RenderResolutionMult=0.500000
+fADOF_ShapeAnamorphRatio=1.000000
+fADOF_ShapeChromaAmount=-0.100000
+fADOF_ShapeCurvatureAmount=1.000000
+fADOF_ShapeRadius=20.500000
+fADOF_ShapeRotation=0.000000
+fADOF_SmootheningAmount=4.000000
+iADOF_BokehMode=2
+iADOF_ShapeChromaMode=2
+iADOF_ShapeQuality=2
+iADOF_ShapeVertices=6
 
