--- a/2. RTShade/Red Faction Guerilla Re-Mars-tered/Red_Faction_Guerilla_Re-Mars-tered_3_HIGH.ini
+++ b/2. RTShade/Red Faction Guerilla Re-Mars-tered/Red_Faction_Guerilla_Re-Mars-tered_3_HIGH.ini
@@ -1,6 +1,5 @@
 PreprocessorDefinitions=PRE_BLOCK_SIZE_2_TO_7=7,USE_MOTION_VECTORS=1,HQAA__INTRODUCTION_ACKNOWLEDGED=1,HQAA_ADVANCED_MODE=1,HQAA_FP32_PRECISION=1,HQAA_FXAA_MULTISAMPLING=0,HQAA_OPTIONAL__DEBANDING=1,HQAA_OPTIONAL__TEMPORAL_AA=1,HQAA_OPTIONAL__TEMPORAL_AA_PERSISTENCE=1,CONTRAST_SHARPEN_RADIUS=0,HQAAL_ADVANCED_MODE=1,FULL_RESOLUTION=0,SMAA_INCLUDE_PS=1,SMAA_INCLUDE_VS=1,FAST_AO_POINTS=8,ADVANCED_BOKEH_EFFECTS=1,HQAA_OPTIONAL__SOFTENING=1,AFX_DOWNSCALE_FACTOR=2,VRS_USE_OPTICAL_FLOW=1,UI_DIFFICULTY=1,BLUR_QUALITY=0,MaxAccumulatedFrameNum=0,OPTICAL_FLOW_SUBPIXEL=1
-Techniques=MartysMods_AntiAliasing@MartysMods_SMAA.fx,MartyMods_Sharpen@MartysMods_SHARPEN.fx,Cobra_Masking_Start@Cobra_Mask.fx,DH_UBER_MOTION@dh_uber_motion.fx,DH_UBER_RT@dh_uber_rt.fx,MartysMods_MXAO@MartysMods_MXAO.fx,CobraFX_Masking_End@Cobra_Mask.fx,AmbientLight@AmbientLight.fx,EyeAdaption@EyeAdaption.fx,ADOF@qUINT_dof.fx,FilmGrain@FilmGrain.fx,Vignette@Vignette.fx,Deband@Deband.fx
-TechniqueSorting=MartysMods_AntiAliasing@MartysMods_SMAA.fx,MartyMods_Sharpen@MartysMods_SHARPEN.fx,Cobra_Masking_Start@Cobra_Mask.fx,DH_UBER_MOTION@dh_uber_motion.fx,DH_UBER_RT@dh_uber_rt.fx,MartysMods_MXAO@MartysMods_MXAO.fx,CobraFX_Masking_End@Cobra_Mask.fx,AmbientLight@AmbientLight.fx,EyeAdaption@EyeAdaption.fx,ADOF@qUINT_dof.fx,FilmGrain@FilmGrain.fx,Vignette@Vignette.fx,Deband@Deband.fx,MartysMods_AntiAliasing_Prepass@MartysMods_SMAA.fx
+Techniques=MartysMods_AntiAliasing@MartysMods_SMAA.fx,MartyMods_Sharpen@MartysMods_SHARPEN.fx,Cobra_Masking_Start@Cobra_Mask.fx,DH_UBER_MOTION@dh_uber_motion.fx,MartysMods_MXAO@MartysMods_MXAO.fx,DH_UBER_RT@dh_uber_rt.fx,CobraFX_Masking_End@Cobra_Mask.fx,AmbientLight@AmbientLight.fx,ADOF@qUINT_dof.fx
 
 [AmbientLight.fx]
 alAdapt=0.700000
@@ -44,21 +43,10 @@ Sphere_FocusVertical=0.500000
 Spherical=0
 Value=0.000000
 ValueEdge=0.750000
-ValueRange=0.000000
-
-[Deband.fx]
-banding_depth=0.999000
-debug_output=0
-enable_depthbuffer=0
-enable_sdeviation=1
-enable_weber=1
-iterations=4
-range=10.000000
-t1=0.002000
-t2=0.040000
+ValueRange=0.150000
 
 [dh_uber_motion.fx]
-iMotionRadius=7
+iMotionRadius=5
 
 [dh_uber_rt.fx]
 bAddAmbient=0
@@ -73,7 +61,7 @@ cTargetAmbientLightColor=0.050980,0.050980,0.050980
 fAODarkProtect=0.000000
 fAOLightProtect=0.000000
 fAOMultiplier=1.000000
-fAOPow=1.200000
+fAOPow=1.000000
 fBaseColor=1.000000
 fDepthMultiplier=1.000000
 fDistanceFading=1.000000
@@ -83,45 +71,26 @@ fGIDarkMerging=0.500000
 fGIFinalMerging=1.000000
 fGIHueBiais=0.250000
 fGILightMerging=0.500000
-fMergingRoughness=1.000000
-fMergingSSR=0.050000
+fMergingRoughness=1.200000
+fMergingSSR=0.250000
 fNormalRoughness=0.150000
 fRayStepPrecision=2000.000000
 fRTMinRayBrightness=0.200000
-fSkyColor=0.200000
+fSkyColor=1.000000
 fSkyDepth=0.990000
 fSourceAmbientIntensity=1.000000
 fWeaponDepth=0.000000
-iAODistance=640
+iAODistance=2560
 iBlackLevel=0
-iCheckerboardRT=0
+iCheckerboardRT=2
 iDebug=0
-iFrameAccu=4
-iRoughnessRadius=1
+iFrameAccu=3
+iRoughnessRadius=4
 iRTCheckHitPrecision=9
 iRTMaxRays=3
-iSmoothRadius=3
+iSmoothRadius=5
 iSmoothStep=3
 iWhiteLevel=255
-
-[EyeAdaption.fx]
-fAdp_BrightenHighlights=0.100000
-fAdp_BrightenMidtones=0.200000
-fAdp_BrightenShadows=0.100000
-fAdp_DarkenHighlights=0.100000
-fAdp_DarkenMidtones=0.200000
-fAdp_DarkenShadows=0.100000
-fAdp_Delay=1.600000
-fAdp_Equilibrium=0.500000
-fAdp_Strength=1.000000
-fAdp_TriggerRadius=6.000000
-fAdp_YAxisFocalPoint=0.500000
-
-[FilmGrain.fx]
-Intensity=0.400000
-Mean=0.500000
-SignalToNoiseRatio=4
-Variance=0.300000
 
 [MartysMods_MXAO.fx]
 HELP1=0
@@ -174,12 +143,4 @@ iADOF_BokehMode=2
 iADOF_ShapeChromaMode=2
 iADOF_ShapeQuality=2
 iADOF_ShapeVertices=6
-
-[Vignette.fx]
-Amount=-0.250000
-Center=0.500000,0.500000
-Radius=2.000000
-Ratio=1.000000
-Slope=2
-Type=0
 
